cabal-version:      2.4
name:               shrun
version:            0.10
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.6.7 || ==9.8.4 || ==9.10.2 || ==9.12.2
copyright:          2021-2025 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/shrun/
bug-reports:        https://github.com/tbidne/shrun/issues
synopsis:           A utility program for running shell commands concurrently.
description:
  Please see the README at https://github.com/tbidne/shrun/#readme

-- TODO: Some of these really don't belong in extra-source-files (and we'd
-- also like to include more in sdist e.g. nix/stack files), but for now
-- include them: See https://github.com/haskell/cabal/issues/8817.

category:           Shell scripting, Utils, Concurrency
extra-source-files:
  cabal.ghc9122.project
  cabal.ghc9122.project.freeze
  cabal.project
  documentation/*.md
  examples/*.toml
  examples/bashrc
  examples/demo.gif
  LICENSE
  README.md
  test/functional/*.toml
  test/functional/cwd/*.toml
  test/functional/scripts/*.sh
  test/functional/xdg_config/shrun/*.toml
  test/functional/xdg_state/shrun/*.txt
  test/integration/toml/*.toml
  test/integration/toml/osx/*.toml

extra-doc-files:    CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/shrun

common common-lang
  default-extensions:
    ApplicativeDo
    DataKinds
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    NoStarIsType
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    StrictData
    TypeFamilies

  -- TODO: Drop condition once GHC 9.6 dropped.
  if impl(ghc >=9.8.1)
    default-extensions: TypeAbstractions

  if os(osx)
    cpp-options: -DOSX

  default-language:   GHC2021

library
  import:          common-lang
  other-modules:   Paths_shrun
  autogen-modules: Paths_shrun
  exposed-modules:
    Shrun
    Shrun.Command
    Shrun.Command.Types
    Shrun.Command.Types.Internal
    Shrun.Configuration
    Shrun.Configuration.Args
    Shrun.Configuration.Args.Parsing
    Shrun.Configuration.Args.Parsing.CommandLogging
    Shrun.Configuration.Args.Parsing.CommonLogging
    Shrun.Configuration.Args.Parsing.ConsoleLogging
    Shrun.Configuration.Args.Parsing.Core
    Shrun.Configuration.Args.Parsing.FileLogging
    Shrun.Configuration.Args.Parsing.Graph
    Shrun.Configuration.Args.Parsing.Notify
    Shrun.Configuration.Args.Parsing.TH
    Shrun.Configuration.Args.Parsing.Utils
    Shrun.Configuration.Data.CommandLogging
    Shrun.Configuration.Data.CommandLogging.PollInterval
    Shrun.Configuration.Data.CommandLogging.ReadSize
    Shrun.Configuration.Data.CommandLogging.ReadStrategy
    Shrun.Configuration.Data.CommonLogging
    Shrun.Configuration.Data.CommonLogging.KeyHideSwitch
    Shrun.Configuration.Data.ConfigPhase
    Shrun.Configuration.Data.ConsoleLogging
    Shrun.Configuration.Data.ConsoleLogging.TimerFormat
    Shrun.Configuration.Data.Core
    Shrun.Configuration.Data.Core.Timeout
    Shrun.Configuration.Data.FileLogging
    Shrun.Configuration.Data.FileLogging.FileMode
    Shrun.Configuration.Data.FileLogging.FilePathDefault
    Shrun.Configuration.Data.FileLogging.FileSizeMode
    Shrun.Configuration.Data.Graph
    Shrun.Configuration.Data.LegendKeysCache
    Shrun.Configuration.Data.MergedConfig
    Shrun.Configuration.Data.Notify
    Shrun.Configuration.Data.Notify.Action
    Shrun.Configuration.Data.Notify.System
    Shrun.Configuration.Data.Notify.Timeout
    Shrun.Configuration.Data.StripControl
    Shrun.Configuration.Data.Truncation
    Shrun.Configuration.Data.WithDisabled
    Shrun.Configuration.Default
    Shrun.Configuration.Env
    Shrun.Configuration.Env.Types
    Shrun.Configuration.Legend
    Shrun.Configuration.Toml
    Shrun.Configuration.Toml.Legend
    Shrun.Data.Text
    Shrun.IO
    Shrun.IO.Handle
    Shrun.Logging
    Shrun.Logging.Formatting
    Shrun.Logging.MonadRegionLogger
    Shrun.Logging.Types
    Shrun.Logging.Types.Internal
    Shrun.Notify
    Shrun.Notify.AppleScript
    Shrun.Notify.DBus
    Shrun.Notify.MonadNotify
    Shrun.Notify.NotifySend
    Shrun.Prelude
    Shrun.ShellT
    Shrun.Utils

  build-depends:
    , algebra-simple        ^>=0.1
    , base                  >=4.17      && <4.22
    , bytestring            >=0.10.12   && <0.13
    , concurrent-output     ^>=1.10.7
    , containers            >=0.6.2.1   && <0.9
    , dbus                  >=1.2.14    && <1.5
    , effects-async         ^>=0.1
    , effects-env           ^>=0.1
    , effects-fs            ^>=0.1
    , effects-ioref         ^>=0.1
    , effects-optparse      ^>=0.1
    , effects-process       ^>=0.1
    , effects-stm           ^>=0.1
    , effects-terminal      ^>=0.1
    , effects-thread        ^>=0.1
    , effects-time          ^>=0.1
    , effects-unix          ^>=0.1
    , exception-utils       ^>=0.1
    , exceptions            ^>=0.10.4
    , fdo-notify            ^>=0.3.1
    , filepath              >=1.4.100.1 && <1.6
    , gitrev-typed          ^>=0.1
    , hashable              >=1.3.0.0   && <1.6
    , megaparsec            >=9.6.0     && <10
    , mtl                   >=2.2.1     && <2.4
    , nonempty-containers   >=0.3.4.2   && <0.4
    , optics-core           ^>=0.4
    , optparse-applicative  ^>=0.19.0.0
    , os-string             ^>=2.0.0
    , pretty-terminal       ^>=0.1
    , relative-time         ^>=0.1
    , si-bytes              ^>=0.1
    , smart-math            ^>=0.1
    , stm                   ^>=2.5.0.0
    , template-haskell      >=2.17.0.0  && <2.24
    , text                  >=1.2.3.2   && <2.2
    , time                  >=1.9.3     && <1.16
    , toml-reader           >=0.2.0.0   && <0.4
    , unix                  >=2.7.2.2   && <2.9
    , unordered-containers  ^>=0.2.9.0

  -- NOTE: megaparsec uses semvar, hence only the first component matters
  -- for upper bounds.
  -- For tuple syntax
  if impl(ghc >=9.10.1)
    build-depends: ghc-experimental >=0.1.0.0 && <9.1203.0

  hs-source-dirs:  src

library shrun-verifier
  import:          common-lang
  exposed-modules: Test.Shrun.Verifier
  build-depends:
    , base
    , tasty-hunit  >=0.9 && <0.11
    , text

  hs-source-dirs:  test/verifier

executable shrun
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , base
    , shrun

  hs-source-dirs: app
  ghc-options:    -threaded -with-rtsopts=-N

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Unit.Generators
    Unit.Prelude
    Unit.Shrun.Configuration.Args.Parsing
    Unit.Shrun.Configuration.Args.Parsing.CommandLogging
    Unit.Shrun.Configuration.Args.Parsing.CommonLogging
    Unit.Shrun.Configuration.Args.Parsing.ConsoleLogging
    Unit.Shrun.Configuration.Args.Parsing.Core
    Unit.Shrun.Configuration.Args.Parsing.FileLogging
    Unit.Shrun.Configuration.Args.Parsing.Graph
    Unit.Shrun.Configuration.Args.Parsing.Notify
    Unit.Shrun.Configuration.Args.Parsing.TestUtils
    Unit.Shrun.Configuration.Data.CommandLogging.ReadSize
    Unit.Shrun.Configuration.Data.Graph
    Unit.Shrun.Configuration.Data.WithDisabled
    Unit.Shrun.Configuration.Legend
    Unit.Shrun.Configuration.Toml
    Unit.Shrun.IO.Handle
    Unit.Shrun.Logging.Formatting
    Unit.Shrun.Logging.Generators
    Unit.Shrun.Utils

  build-depends:
    , base
    , containers
    , effects-time
    , hedgehog              >=1.0.2   && <1.8
    , nonempty-containers
    , optparse-applicative
    , shrun
    , si-bytes
    , tasty                 >=1.1.0.3 && <1.6
    , tasty-hedgehog        >=1.2.0.0 && <1.5
    , tasty-hunit
    , text
    , time
    , unordered-containers

  hs-source-dirs: test/unit
  ghc-options:    -threaded -with-rtsopts=-N

test-suite integration
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Integration.Defaults
    Integration.Examples
    Integration.Failures
    Integration.Miscellaneous
    Integration.Prelude
    Integration.Utils

  build-depends:
    , base
    , dbus
    , effects-fs
    , effects-terminal
    , env-guard
    , hedgehog
    , nonempty-containers
    , shrun
    , tasty
    , tasty-hedgehog
    , tasty-hunit
    , text

  hs-source-dirs: test/integration

test-suite functional
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Functional.Buffering
    Functional.Examples
    Functional.Examples.CommandLogging
    Functional.Examples.CommonLogging
    Functional.Examples.ConsoleLogging
    Functional.Examples.Core
    Functional.Examples.FileLogging
    Functional.Examples.Notify
    Functional.Graph
    Functional.Miscellaneous
    Functional.Notify
    Functional.Prelude
    Functional.Prelude.FuncEnv
    Functional.ReadStrategyTest
    Functional.TestArgs

  build-depends:
    , base
    , effects-async
    , effects-fs
    , effects-unix
    , env-guard
    , fdo-notify
    , optparse-applicative
    , shrun
    , shrun-verifier
    , tagged                ^>=0.8.6
    , tasty
    , tasty-hunit
    , text

  hs-source-dirs: test/functional

test-suite notify
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
  build-depends:
    , base
    , env-guard
    , shrun
    , tasty
    , tasty-hunit
    , text

  hs-source-dirs: test/notify

test-suite terminate
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
  build-depends:
    , base
    , effects-async
    , effects-fs
    , effects-process
    , env-guard
    , shrun
    , tasty
    , tasty-hunit
    , text

  hs-source-dirs: test/terminate

benchmark benchmarks
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:  Bench.Prelude
  build-depends:
    , base
    , deepseq      >=1.4.4.0 && <1.6
    , effects-fs
    , env-guard    ^>=0.2
    , shrun
    , tasty-bench  >=0.3     && <0.5

  hs-source-dirs: benchmarks
